--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
     <!--IMPORT GOOGLE FONTS-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 <body>
     <main class="main-container">
@@ -22,6 +22,76 @@
         </header> <!--end of input-container-->
 
 
+        <section class="Weather-info">
+            <div class="location-data-container">
+                <div class="location">
+                    <span class="material-symbols-outlined">
+                         location_on
+                    </span>
+                    <h4 class="country-text">
+                        jakarta
+                    </h4>
+                    </div> <!--end of location-->
+                    <h5 class="current-data-text regular-txt">
+                        Sat, 09 Aug
+                    </h5>
+            </div> <!--end of location-data-container-->
+
+            <div class="weather-summary-container">
+                <img src="assets/weather/clouds.svg" class="weather-summary-img">
+                <div class="weather-summary-info">
+                    <h1 class="temp-txt">
+                        29°C
+                    </h1>
+                    <h3 class="condition-txt regular-text">Clouds</h3>
+                </div> <!--end ofweather-summary-info-->
+            </div> <!--end of weather-summary-container -->
+
+            <div class="weather-condition-container">
+                <div class="condition-item">
+                    <span class="material-symbols-outlined">
+                      water_drop
+                    </span>
+                    <div class="condition-info">
+                        <h5 class="regular-txt">Humidity</h5>
+                        <h5 class="humidity-value-txt">70%</h5>
+                    </div> <!--end of condititon-info-->
+                </div> <!--end of condition-item-->
+
+                <div class="condition-item">
+                    <span class="material-symbols-outlined">
+                      air
+                    </span>
+                    <div class="condition-info">
+                        <h5 class="regular-txt">Wind Speed</h5>
+                        <h5 class="Wind-value-txt">2 M/s</h5>
+                    </div> <!--end of condititon-info-->
+                </div> <!--end of condition-item-->
+            </div> <!--end ofweather-condition-container-->
+
+            <div class="forecast-item-container">
+                <div class="forecast-item">
+                    <h5 class="forecast-item-date regular-txt">11 Aug</h5>
+                    <img src="assets/weather/thunderstorm.svg" class="forecast-item-img">
+                    <h5 class="forecast-item-temp">29°C</h5>
+                </div> <!--end of forecast-item 1-->
+                <div class="forecast-item">
+                    <h5 class="forecast-item-date regular-txt">11 Aug</h5>
+                    <img src="assets/weather/thunderstorm.svg" class="forecast-item-img">
+                    <h5 class="forecast-item-temp">29°C</h5>
+                </div> <!--end of forecast-item 2-->
+                <div class="forecast-item">
+                    <h5 class="forecast-item-date regular-txt">11 Aug</h5>
+                    <img src="assets/weather/thunderstorm.svg" class="forecast-item-img">
+                    <h5 class="forecast-item-temp">29°C</h5>
+                </div> <!--end of forecast-item 3-->
+                <div class="forecast-item">
+                    <h5 class="forecast-item-date regular-txt">11 Aug</h5>
+                    <img src="assets/weather/thunderstorm.svg" class="forecast-item-img">
+                    <h5 class="forecast-item-temp">29°C</h5>
+                </div> <!--end of forecast-item 4-->
+            </div> <!--end of forecast-item-container-->
+        </section> <!--end of weather-info-->
     </main> <!--end of main-container-->
 </body>
 </html>
