--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header> <!--end of input-container-->
 
 
-        <section class="Weather-info">
+        <section class="Weather-info" style="display: none;">
             <div class="location-data-container">
                 <div class="location">
                     <span class="material-symbols-outlined">
@@ -92,6 +92,27 @@
                 </div> <!--end of forecast-item 4-->
             </div> <!--end of forecast-item-container-->
         </section> <!--end of weather-info-->
+
+        <section class="search-city section-message">
+            <img src="assets/message/search-city.png">
+            <div>
+                <h1>Search City</h1>
+                <h5 class="regular-txt">
+                    Find out the weather condition of the city
+                </h5>
+            </div>
+        </section> <!--end of search-city-->
+            <section class="not-found section-message" style="display: none;">
+            <img src="assets/message/not-found.png">
+            <div>
+                <h1>Search City</h1>
+                <h5 class="regular-txt">
+                    Find out the weather condition of the city
+                </h5>
+            </div>
+        </section>
+
+
     </main> <!--end of main-container-->
 </body>
 </html>
