added js and fixed mistakes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <!--IMPORT GOOGLE FONTS-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
@@ -28,7 +29,7 @@
                     <span class="material-symbols-outlined">
                          location_on
                     </span>
-                    <h4 class="country-text">
+                    <h4 class="country-txt">
                         jakarta
                     </h4>
                     </div> <!--end of location-->
